--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,6 @@
+[user]
+	name = Infertux
+	email = infertux@infertux.com
 [alias]
 	addrm = add -u
 	br = branch
@@ -12,12 +15,13 @@
 	out = log --oneline origin/master..HEAD
 	wdiff = diff --color-words
 	info = remote -v
-	initial = "!sh -c 'git init && git add . && git ci -m \"Initial import\"'"
-	up = "!sh -c 'git stash && git pull && git stash pop'"
+	up = !git stash && git pull && git stash pop
+	ll = log --pretty=oneline --abbrev-commit --max-count=15
+	thanks = !git-thanks
 [color]
-	diff = auto
-	status = auto
-	branch = auto
-[user]
-	name = Infertux
-	email = infertux@infertux.com
+	ui = auto
+[merge]
+	tool = vimdiff
+[diff]
+	renames = copies
+	mnemonicprefix = true
