--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/vim-scripts/Tagbar.git
 [submodule ".vim/bundle/colorizer"]
 	path = .vim/bundle/colorizer
-	url = https://github.com/vim-scripts/colorizer
+	url = https://github.com/vim-scripts/colorizer.git
