--- a/.gitconfig
+++ b/.gitconfig
@@ -17,6 +17,9 @@
 	info = remote -v
 	up = !git stash && git pull && git stash pop
 	ll = log --pretty=oneline --abbrev-commit --max-count=15
+	lol = log --graph --decorate --pretty=oneline --abbrev-commit
+	lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
+	lp = log -p
 	thanks = shortlog -sne
 [color]
 	ui = auto
@@ -25,3 +28,7 @@
 [diff]
 	renames = copies
 	mnemonicprefix = true
+[branch]
+	autosetuprebase = always
+[color "diff"]
+	whitespace = yellow reverse
