--- a/.gitconfig
+++ b/.gitconfig
@@ -17,6 +17,7 @@
 	info = remote -v
 	up = !git stash && git pull && git stash pop
 	ll = log --pretty=oneline --abbrev-commit --max-count=15
+	lp = log -p
 	thanks = shortlog -sne
 [color]
 	ui = auto
