--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,25 @@
-*
 !.*
-.Xauthority
+*
+.apvlvinfo
 .bash_history
 .cache/
 .config/
 .gconf/
-.git-achievements*\.log
 .history
+.irb-history
 .lesshst
+.pulse-cookie
+.recently-used
+.rnd
 .rvm/
+.sqlite_history
 .ssh/
 .subversion/
 .viminfo
 .vim/.netrwhist
 .wireshark/
-.zcompdump
-.zshrc.local
-.irb-history
-.pulse-cookie
-.recently-used
-.rnd
-.sqlite_history
+.Xauthority
 .xinitrc
 .xscreensaver
+.zcompdump
+.zshrc.local
