--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,28 @@
 *
 !.*
-.apvlvinfo
-.bash_history
-.cache/
-.config/
-!.config/wmfs/
-.gconf/
-.history
-.irb-history
-.lesshst
-.pulse-cookie
-.recently-used
-.rnd
-.rvm/
-.sqlite_history
-.ssh/
-.subversion/
-.viminfo
-.vim/.netrwhist
-!.vim/bundle/
-.wireshark/
-.Xauthority
-.xinitrc
-.xscreensaver
-.zcompdump
-.zshrc.local
+/.apvlvinfo
+/.bash_history
+/.csshrc
+/.cache/
+/.config/
+!/.config/wmfs/
+/.gconf/
+/.history
+/.irb_history
+/.lesshst
+/.pulse-cookie
+/.recently-used
+/.rnd
+/.rvm/
+/.sqlite_history
+/.ssh/
+/.subversion/
+/.viminfo
+/.vim/.netrwhist
+!/.vim/bundle/
+/.wireshark/
+/.Xauthority
+/.xinitrc
+/.xscreensaver
+/.zcompdump
+/.zshrc.local
