--- a/.gitconfig
+++ b/.gitconfig
@@ -20,6 +20,7 @@
 	lol = log --graph --decorate --pretty=oneline --abbrev-commit --all
 	lp = log -p
 	thanks = shortlog -sne
+	diff-empty = diff 4b825dc642cb6eb9a060e54bf8d69288fbee4904
 [color]
 	ui = auto
 [merge]
@@ -31,3 +32,5 @@
 	autosetuprebase = always
 [color "diff"]
 	whitespace = yellow reverse
+[push]
+	default = tracking
