--- a/.gitmodules
+++ b/.gitmodules
@@ -33,3 +33,9 @@
 [submodule ".vim/bundle/auctex"]
 	path = .vim/bundle/auctex
 	url = https://github.com/vim-scripts/auctex.vim.git
+[submodule ".vim/bundle/vim-haml"]
+	path = .vim/bundle/vim-haml
+	url = https://github.com/tpope/vim-haml.git
+[submodule ".vim/bundle/vim-markdown"]
+	path = .vim/bundle/vim-markdown
+	url = https://github.com/tpope/vim-markdown.git
