--- a/.gitconfig
+++ b/.gitconfig
@@ -21,6 +21,7 @@
 	lp = log -p
 	thanks = shortlog -sne
 	diff-empty = diff 4b825dc642cb6eb9a060e54bf8d69288fbee4904
+	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 [color]
 	ui = auto
 [merge]
