--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,48 @@
 *
 !.*
-!.*/*
-!.*/**/*
-.Xauthority
-.bash_history
-.*history
-.lesshst
-.rvm/
-.ssh/
-.viminfo
-.vim/.netrwhist
-.wireshark/
-.zcompdump
-.zshrc.local
+/.apvlvinfo
+/.bash_history
+/.csshrc
+/.cache/
+/.config/
+!/.config/wmfs/
+/.gconf/
+/.history
+/.irb_history
+/.lesshst
+/.pulse-cookie
+/.recently-used
+/.rnd
+/.rvm/
+/.sqlite_history
+/.ssh/
+/.subversion/
+/.viminfo
+/.vim/.netrwhist
+!/.vim/bundle/
+/.wireshark/
+/.Xauthority
+/.xinitrc
+/.xscreensaver
+/.zcompdump
+/.zshrc.local
+/.ICEauthority
+/.bashrc
+/.esd_auth
+/.grl-bookmarks
+/.grl-metadata-store
+/.grl-podcasts
+/.gtk-bookmarks
+/.imsettings.log
+/.irb-history
+/.java/
+/.mysql_history
+/.netrc
+/.nvidia-settings-rc
+/.pry_history
+/.pythonhist
+/.rediscli_history
+/.rubinius_last_error
+/.xsession-errors
+/.xsession-errors.old
+/.zlogin
