--- a/.gitconfig
+++ b/.gitconfig
@@ -22,6 +22,7 @@
 	thanks = shortlog -sne
 	diff-empty = diff 4b825dc642cb6eb9a060e54bf8d69288fbee4904
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+	delete-merged = !git branch --merged master | grep -v 'master$' | xargs git branch -d
 [color]
 	ui = auto
 [merge]
