--- a/.conkyrc
+++ b/.conkyrc
@@ -15,9 +15,9 @@ ${endif}\
 ${if_up wlan0}\
   ^s[right;\#DDDDDD; ${texeci 60 mtr -nlc1 8.8.8.8 | tail -1 | sed "s/p \(.*\) \(.*\)$/\1 hops \2/;s/...$/ms/"}]\
   ^s[right;\#777777; | ]\
-  ^s[right;\#777777;RX:] ^s[right;\#DDDDDD; ${upspeedf wlan0}]\
+  ^s[right;\#777777;RX:] ^s[right;\#DDDDDD; ${downspeedf wlan0}]\
   ^s[right;\#777777; | ]\
-  ^s[right;\#777777;TX:] ^s[right;\#DDDDDD; ${downspeedf wlan0}]\
+  ^s[right;\#777777;TX:] ^s[right;\#DDDDDD; ${upspeedf wlan0}]\
   ^s[right;\#777777; | ]\
   ^s[right;\#777777;WIFI:] ^s[right;\#DDDDDD; ${wireless_essid wlan0} ${wireless_link_qual_perc wlan0}%]\
 ${endif}\
