--- a/.gitmodules
+++ b/.gitmodules
@@ -67,9 +67,7 @@
 [submodule ".vim/bundle/vim-i18n"]
 	path = .vim/bundle/vim-i18n
 	url = https://github.com/stefanoverna/vim-i18n.git
-[submodule ".zsh/git-prompt"]
-	path = .zsh/git-prompt
-	url = git://github.com/olivierverdier/zsh-git-prompt.git
+	branch = ee1851b
 [submodule ".vim/bundle/vim-pathogen"]
 	path = .vim/bundle/vim-pathogen
 	url = https://github.com/tpope/vim-pathogen.git
@@ -82,6 +80,9 @@
 [submodule ".vim/bundle/vim-hardtime"]
 	path = .vim/bundle/vim-hardtime
 	url = https://github.com/takac/vim-hardtime.git
+[submodule ".zsh/git-prompt"]
+	path = .zsh/git-prompt
+	url = git://github.com/olivierverdier/zsh-git-prompt.git
 [submodule ".zsh/zsh-syntax-highlighting"]
 	path = .zsh/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
