Ignore some more files

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,6 @@
 /.bash_profile
 /.bashrc
 /.cache/
-/.config/
-!/.config/wmfs/
 /.csshrc
 /.esd_auth
 /.gconf/
@@ -20,6 +18,7 @@
 /.gtk-bookmarks
 /.guard_history
 /.history
+/.i3status.conf
 /.imsettings.log
 /.irb-history
 /.irb[-_]history
@@ -29,12 +28,14 @@
 /.netrc
 /.npmrc
 /.nvidia-settings-rc
+/.octave_hist
 /.pgadmin3
 /.pgpass
 /.pry_history
 /.psql_history
 /.pulse-cookie
 /.pythonhist
+/.python_history
 /.recently-used
 /.rediscli_history
 /.rnd
@@ -42,14 +43,16 @@
 /.rvm/
 /.sqlite_history
 /.ssh/
+/.ssh*
 /.subversion/
-!/.vim/bundle/
+/.transifexrc
 /.vim/.netrwhist
 /.viminfo
 /.viminfo.tmp
 /.wavemonrc
 /.wireshark/
 /.xinitrc
+/.xprofile
 /.xscreensaver
 /.xsession-errors
 /.xsession-errors.old
