Tweak GPG config

--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -18,6 +18,9 @@
 # behavior
 #-----------------------------
 
+# Suppress the initial copyright message
+no-greeting
+
 # Disable inclusion of the version string in ASCII armored output
 no-emit-version
 
@@ -37,6 +40,12 @@ verify-options show-uid-validity
 # Try to use the GnuPG-Agent. With this option, GnuPG first tries to connect to
 # the agent before it asks for a passphrase.
 use-agent
+
+# Do NOT allow the user to do certain nonsensical or "silly" things
+no-expert
+
+# Show warnings about expired signatures, etc.
+verbose
 
 
 #-----------------------------
