--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule ".zsh/zsh-syntax-highlighting"]
 	path = .zsh/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+[submodule ".vim/bundle/hardmode"]
+	path = .vim/bundle/hardmode
+	url = https://github.com/wikitopian/hardmode.git
