--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,9 @@
 [submodule ".vim/bundle/hardmode"]
 	path = .vim/bundle/hardmode
 	url = https://github.com/wikitopian/hardmode.git
+[submodule ".vim/bundle/vim-elixir"]
+	path = .vim/bundle/vim-elixir
+	url = https://github.com/elixir-lang/vim-elixir.git
+[submodule ".vim/bundle/apiblueprint"]
+	path = .vim/bundle/apiblueprint
+	url = https://github.com/kylef/apiblueprint.vim.git
