--- a/.gitconfig
+++ b/.gitconfig
@@ -17,7 +17,7 @@
 	thanks = shortlog -sne
 	diff-empty = diff 4b825dc642cb6eb9a060e54bf8d69288fbee4904
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
-	delete-merged = !git branch --merged master | grep -Ev '(master|production)$' | xargs git branch -d
+	delete-merged = !git branch --merged master | grep -Ev '(development|master|production)$' | xargs git branch -d
 	unfuck = reset --soft HEAD@{1}
 [color]
 	ui = auto
