Don't override C-a so we can use screen within tmux sessions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,5 @@
-# 256 colors 'cause it is beautiful
+# 256 colors
 set -g default-terminal "screen-256color"
-
-# Send prefix to ohter apps
-bind C-a send-prefix
 
 # Split windows with more logical keys
 bind | split-window -h
