--- a/.gitconfig
+++ b/.gitconfig
@@ -41,3 +41,7 @@
 	showSignature = true
 [mergetool]
 	keepBackup = false
+[pager]
+	log = diff-highlight | less
+	show = diff-highlight | less
+	diff = diff-highlight | less
