--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 !/.*
 *.orig
 *.swp
+/.*_history
 /.ICEauthority
 /.NERDTreeBookmarks
 /.Xauthority
@@ -18,33 +19,23 @@
 /.grl-metadata-store
 /.grl-podcasts
 /.gtk-bookmarks
-/.guard_history
 /.history
 /.i3status.conf
 /.imsettings.log
-/.irb-history
-/.irb[-_]history
 /.java/
 /.lesshst
-/.mysql_history
 /.netrc
-/.node_repl_history
 /.nvidia-settings-rc
 /.octave_hist
 /.pgadmin3
 /.pgpass
-/.pry_history
-/.psql_history
 /.pulse-cookie
-/.python_history
 /.pythonhist
 /.recently-used
-/.rediscli_history
 /.repo_.gitconfig.json
 /.rnd
 /.rubinius_last_error
 /.rvm/
-/.sqlite_history
 /.ssh*
 /.ssh/
 /.subversion/
@@ -62,6 +53,7 @@
 /.xscreensaver
 /.xsession-errors
 /.xsession-errors.old
+/.yarnrc
 /.zcompdump
 /.zlogin
 /.zshrc.local
