--- a/.gitmodules
+++ b/.gitmodules
@@ -2,82 +2,50 @@
 	path = bin
 	url = https://github.com/infertux/bin-scripts.git
 	ignore = dirty
-[submodule ".vim/bundle/colorizer"]
-	path = .vim/bundle/colorizer
-	url = https://github.com/vim-scripts/colorizer.git
-[submodule ".vim/bundle/rails"]
-	path = .vim/bundle/rails
-	url = https://github.com/vim-scripts/rails.vim.git
-[submodule ".vim/bundle/nerdtree"]
-	path = .vim/bundle/nerdtree
-	url = https://github.com/scrooloose/nerdtree.git
-[submodule ".vim/bundle/commentary"]
-	path = .vim/bundle/commentary
-	url = https://github.com/vim-scripts/commentary.vim.git
-	ignore = dirty
-[submodule ".vim/bundle/vim-fugitive"]
-	path = .vim/bundle/vim-fugitive
-	url = https://github.com/tpope/vim-fugitive.git
-[submodule ".vim/bundle/auctex"]
-	path = .vim/bundle/auctex
-	url = https://github.com/vim-scripts/auctex.vim.git
-[submodule ".vim/bundle/vim-haml"]
-	path = .vim/bundle/vim-haml
-	url = https://github.com/tpope/vim-haml.git
-[submodule ".vim/bundle/vim-colors-solarized"]
-	path = .vim/bundle/vim-colors-solarized
-	url = https://github.com/altercation/vim-colors-solarized.git
-[submodule ".vim/bundle/vim-gitgutter"]
-	path = .vim/bundle/vim-gitgutter
-	url = https://github.com/airblade/vim-gitgutter.git
-[submodule ".vim/bundle/syntastic"]
-	path = .vim/bundle/syntastic
-	url = https://github.com/scrooloose/syntastic.git
-[submodule ".vim/bundle/ctrlp"]
-	path = .vim/bundle/ctrlp
-	url = https://github.com/kien/ctrlp.vim.git
-[submodule ".vim/bundle/vim-dispatch"]
-	path = .vim/bundle/vim-dispatch
+
+[submodule "vim-plugin-ale"]
+	path = .vim/pack/plugins/start/ale
+	url = https://github.com/w0rp/ale.git
+[submodule "vim-plugin-completor"]
+	path = .vim/pack/plugins/start/completor
+	url = https://github.com/maralla/completor.vim.git
+[submodule "vim-plugin-dispatch"]
+	path = .vim/pack/plugins/start/dispatch
 	url = https://github.com/tpope/vim-dispatch.git
-[submodule ".vim/bundle/tabular"]
-	path = .vim/bundle/tabular
-	url = https://github.com/godlygeek/tabular.git
-[submodule ".vim/bundle/vim-surround"]
-	path = .vim/bundle/vim-surround
-	url = https://github.com/tpope/vim-surround.git
-[submodule ".vim/bundle/vim-pathogen"]
-	path = .vim/bundle/vim-pathogen
-	url = https://github.com/tpope/vim-pathogen.git
-[submodule ".vim/bundle/vim-endwise"]
-	path = .vim/bundle/vim-endwise
-	url = https://github.com/tpope/vim-endwise.git
-[submodule ".vim/bundle/file-line"]
-	path = .vim/bundle/file-line
+[submodule "vim-plugin-elm"]
+	path = .vim/pack/plugins/start/elm
+	url = https://github.com/ElmCast/elm-vim.git
+[submodule "vim-plugin-easymotion"]
+	path = .vim/pack/plugins/start/easymotion
+	url = https://github.com/easymotion/vim-easymotion.git
+[submodule "vim-plugin-file-line"]
+	path = .vim/pack/plugins/start/file-line
 	url = https://github.com/bogado/file-line.git
-[submodule ".vim/bundle/ag"]
-	path = .vim/bundle/ag
-	url = https://github.com/vim-scripts/ag.vim.git
-[submodule ".zsh/git-prompt"]
+[submodule "vim-plugin-fugitive"]
+	path = .vim/pack/plugins/start/fugitive
+	url = https://github.com/tpope/vim-fugitive.git
+[submodule "vim-plugin-gitgutter"]
+	path = .vim/pack/plugins/start/gitgutter
+	url = https://github.com/airblade/vim-gitgutter.git
+[submodule "vim-plugin-nerdcommenter"]
+	path = .vim/pack/plugins/start/nerdcommenter
+	url = https://github.com/scrooloose/nerdcommenter.git
+[submodule "vim-plugin-nerdtree"]
+	path = .vim/pack/plugins/start/nerdtree
+	url = https://github.com/scrooloose/nerdtree.git
+[submodule "vim-plugin-solarized"]
+	path = .vim/pack/plugins/start/solarized
+	url = https://github.com/altercation/vim-colors-solarized.git
+[submodule "vim-plugin-surround"]
+	path = .vim/pack/plugins/start/surround
+	url = https://github.com/tpope/vim-surround.git
+[submodule "vim-plugin-tagbar"]
+	path = .vim/pack/plugins/start/tagbar
+	url = https://github.com/majutsushi/tagbar.git
+
+[submodule "zsh-git-prompt"]
 	path = .zsh/git-prompt
 	url = https://github.com/olivierverdier/zsh-git-prompt.git
-[submodule ".zsh/zsh-syntax-highlighting"]
+[submodule "zsh-syntax-highlighting"]
 	path = .zsh/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
-[submodule ".vim/bundle/hardmode"]
-	path = .vim/bundle/hardmode
-	url = https://github.com/wikitopian/hardmode.git
-[submodule ".vim/bundle/vim-elixir"]
-	path = .vim/bundle/vim-elixir
-	url = https://github.com/elixir-lang/vim-elixir.git
-[submodule ".vim/bundle/elm-vim"]
-	path = .vim/bundle/elm-vim
-	url = https://github.com/ElmCast/elm-vim.git
-[submodule ".vim/bundle/tagbar"]
-	path = .vim/bundle/tagbar
-	url = https://github.com/majutsushi/tagbar
-[submodule ".vim/bundle/vim-airline"]
-	path = .vim/bundle/vim-airline
-	url = https://github.com/vim-airline/vim-airline
-[submodule ".vim/bundle/ale"]
-	path = .vim/bundle/ale
-	url = https://github.com/w0rp/ale.git
