Migrate to Wayland/Sway

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
-*
-!/.*
-*.orig
-*.swp
-/.*_history
+/.*[_-]history
 /.ICEauthority
 /.NERDTreeBookmarks
 /.Xauthority
@@ -11,19 +7,32 @@
 /.bash_*
 /.bashrc
 /.cache/
+/.chefdk/cache/
+/.config/dconf/
+/.config/mimeapps.list
+/.config/pulse/
+/.config/transmission/
+/.config/weboob/
 /.csshrc
 /.eaglerc
+/.elm/
 /.esd_auth
 /.gconf/
+/.gem/
+/.gnupg/crls.d/
+/.gnupg/pubring.kbx*
+/.gnupg/trustdb.gpg
 /.grl-bookmarks
 /.grl-metadata-store
 /.grl-podcasts
 /.gtk-bookmarks
 /.history
 /.i3status.conf
+/.icedove/
 /.imsettings.log
 /.java/
 /.lesshst
+/.local/share/
 /.netrc
 /.nvidia-settings-rc
 /.octave_hist
@@ -35,6 +44,7 @@
 /.repo_.gitconfig.json
 /.rnd
 /.rubinius_last_error
+/.rustup/
 /.rvm/
 /.ssh*
 /.ssh/
@@ -45,6 +55,7 @@
 /.vim/.netrwhist
 /.viminfo
 /.viminfo.tmp
+/.vimperator/
 /.wavemonrc
 /.wget-hsts
 /.wireshark/
@@ -56,4 +67,8 @@
 /.yarnrc
 /.zcompdump
 /.zlogin
+/.zsh_cache/
 /.zshrc.local
+/Downloads/
+/Music/
+/dev/
