Ignore more config

--- a/.gitignore
+++ b/.gitignore
@@ -2,26 +2,30 @@
 /.ICEauthority
 /.NERDTreeBookmarks
 /.Xauthority
+/.android/
 /.apvlvinfo
 /.babel.json
 /.bash_*
 /.bashrc
+/.bundle/cache/
 /.cache/
+/.cargo/registry/
+/.chef/
 /.chefdk/cache/
 /.config/dconf/
+/.config/gconf/
 /.config/mimeapps.list
 /.config/pulse/
 /.config/transmission/
 /.config/weboob/
+/.config/wireshark/recent*
 /.csshrc
+/.docker/
 /.eaglerc
 /.elm/
 /.esd_auth
-/.gconf/
 /.gem/
-/.gnupg/crls.d/
-/.gnupg/pubring.kbx*
-/.gnupg/trustdb.gpg
+/.gnupg/
 /.grl-bookmarks
 /.grl-metadata-store
 /.grl-podcasts
@@ -33,8 +37,11 @@
 /.java/
 /.lesshst
 /.local/share/
+/.mozilla/
 /.netrc
+/.npm/
 /.nvidia-settings-rc
+/.nvm/
 /.octave_hist
 /.pgadmin3
 /.pgpass
@@ -50,9 +57,14 @@
 /.ssh/
 /.subversion/
 /.sudo_as_admin_successful
+/.thunderbird/
+/.tox/
 /.transifexrc
 /.v8flags.*.json
+/.vagrant.d/
 /.vim/.netrwhist
+/.vim/undodir/
+/.vim/view/
 /.viminfo
 /.viminfo.tmp
 /.vimperator/
