--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /.babel.json
 /.bash_*
 /.bashrc
+/.berkshelf/
 /.bundle/cache/
 /.cache/
 /.cargo/registry/
@@ -14,6 +15,7 @@
 /.chefdk/cache/
 /.config/dconf/
 /.config/gconf/
+/.config/libreoffice/
 /.config/mimeapps.list
 /.config/pulse/
 /.config/transmission/
@@ -39,6 +41,7 @@
 /.local/share/
 /.mozilla/
 /.netrc
+/.node-gyp/
 /.npm/
 /.nvidia-settings-rc
 /.nvm/
@@ -84,3 +87,5 @@
 /Downloads/
 /Music/
 /dev/
+/go/
+/sway.log
