--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,16 @@
+# Use `tmux source-file ~/.tmux.conf` to reload this config
+
+set -g prefix '`'
+set -g visual-activity on
+setw -g monitor-activity on
+setw -g window-status-current-style bg=yellow
+
 # Split windows with more logical keys
-bind | split-window -h
-bind - split-window -v
+bind-key | split-window -h
+bind-key - split-window -v
 
 # Remap movement keys
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
