--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 /.*[_-]history
+/.AndroidStudio*/
 /.ICEauthority
 /.NERDTreeBookmarks
 /.Xauthority
 /.android/
 /.apvlvinfo
+/.aws/
 /.babel.json
 /.bash_*
 /.bashrc
@@ -13,18 +15,12 @@
 /.cargo/registry/
 /.chef/
 /.chefdk/cache/
-/.config/dconf/
-/.config/gconf/
-/.config/libreoffice/
-/.config/mimeapps.list
-/.config/pulse/
-/.config/transmission/
-/.config/weboob/
-/.config/wireshark/recent*
+/.config/
 /.csshrc
 /.dia/
 /.docker/
 /.eaglerc
+/.elinks/
 /.elm/
 /.esd_auth
 /.gem/
@@ -38,8 +34,10 @@
 /.i3status.conf
 /.icedove/
 /.imsettings.log
+/.ipfs/
 /.ipython/
 /.java/
+/.kitchen/cache/
 /.lesshst
 /.local/share/
 /.mozilla/
@@ -53,7 +51,9 @@
 /.packer.d/
 /.pgadmin3
 /.pgpass
+/.pki/
 /.pulse-cookie
+/.purple/
 /.pyenv/
 /.pythonhist
 /.recently-used
@@ -67,6 +67,7 @@
 /.subversion/
 /.sudo_as_admin_successful
 /.thunderbird/
+/.torcs/
 /.tox/
 /.transifexrc
 /.v8flags.*.json
@@ -78,6 +79,7 @@
 /.viminfo
 /.viminfo.tmp
 /.vimperator/
+/.virtualenvs/
 /.wavemonrc
 /.wget-hsts
 /.wireshark/
