--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -76,7 +76,7 @@ keyserver-options no-honor-keyserver-url
 
 # When searching for a key with --search-keys, include keys that are marked on
 # the keyserver as revoked
-keyserver-options include-revoked
+# keyserver-options include-revoked
 
 
 #-----------------------------
