--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -2,6 +2,8 @@
 # This is an implementation of the Riseup OpenPGP Best Practices
 # https://help.riseup.net/en/security/message-security/openpgp/best-practices
 #
+# See also https://infosec.mozilla.org/guidelines/key_management.html
+#
 
 
 #-----------------------------
