--- a/.config/sway/config
+++ b/.config/sway/config
@@ -134,8 +134,8 @@ bar {
 bindsym $mod+Delete exec swaylock -c 000000
 
 # Screenshot with Scrot
-bindsym --release Print exec --no-startup-id scrot -e 'mv $f ~/Screenshots/'
-bindsym --release Shift+Print exec --no-startup-id scrot -s -e 'mv $f ~/Screenshots/'
+bindsym Print exec --no-startup-id grim $HOME/Screenshots/$(date -Iseconds).png
+bindsym Shift+Print exec --no-startup-id grim -g "$(slurp)" $HOME/Screenshots/$(date -Iseconds).png
 
 # Volume controls
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +10%
