--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -91,11 +91,14 @@ personal-cipher-preferences AES256 AES192 AES CAST5
 
 # list of personal digest preferences. When multiple ciphers are supported by
 # all recipients, choose the strongest one
-personal-digest-preferences SHA512 SHA384 SHA256 SHA224
+personal-digest-preferences SHA512 SHA384
 
 # message digest algorithm used when signing a key
 cert-digest-algo SHA512
 
 # This preference list is used for new keys and becomes the default for
 # "setpref" in the edit menu
-default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
+default-preference-list SHA512 SHA384 AES256 ZLIB BZIP2 ZIP Uncompressed
+
+auto-key-locate clear,nodefault,wkd,dane,local
+auto-key-retrieve
