--- a/.config/sway/config
+++ b/.config/sway/config
@@ -8,7 +8,8 @@ default_border normal
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec termite
+bindsym $mod+Return exec kitty
+#bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
