--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -13,7 +13,7 @@
 # The default key to sign with. If this option is not used, the default key is
 # the first key found in the secret keyring
 
-#default-key 0xD8692123C4065DEA5E0F3AB5249B39D24F25E3B6
+default-key 0xEEC73D5809A98A9B
 
 
 #-----------------------------
@@ -28,6 +28,10 @@ no-emit-version
 
 # Disable comment string in clear text signatures and ASCII armored messages
 no-comments
+
+# Encrypt-to-self
+# https://www.gnu.org/software/emacs/manual/html_node/message/Encrypt_002dto_002dself.html
+encrypt-to 0xEEC73D5809A98A9B
 
 # Display long key IDs
 keyid-format 0xlong
@@ -56,7 +60,9 @@ verbose
 
 # This is the server that --recv-keys, --send-keys, and --search-keys will
 # communicate with to receive keys from, send keys to, and search for keys on
-keyserver hkp://hkps.pool.sks-keyservers.net
+#keyserver hkps://hkps.pool.sks-keyservers.net
+keyserver hkp://pgp.cyberbits.eu
+#keyserver hkps://keys.openpgp.org
 
 # Provide a certificate store to override the system default
 # Get this from https://sks-keyservers.net/sks-keyservers.netCA.pem
@@ -80,6 +86,12 @@ keyserver-options no-honor-keyserver-url
 # the keyserver as revoked
 # keyserver-options include-revoked
 
+# Automatically locate and retrieve keys as needed
+auto-key-locate clear,nodefault,wkd,dane,local
+
+# Automatic retrieving of keys from a keyserver when verifying signatures made
+# by keys that are not on the local keyring
+auto-key-retrieve
 
 #-----------------------------
 # algorithm and ciphers
@@ -99,6 +111,3 @@ cert-digest-algo SHA512
 # This preference list is used for new keys and becomes the default for
 # "setpref" in the edit menu
 default-preference-list SHA512 SHA384 AES256 ZLIB BZIP2 ZIP Uncompressed
-
-auto-key-locate clear,nodefault,wkd,dane,local
-auto-key-retrieve
