--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -60,9 +60,9 @@ verbose
 
 # This is the server that --recv-keys, --send-keys, and --search-keys will
 # communicate with to receive keys from, send keys to, and search for keys on
-#keyserver hkps://hkps.pool.sks-keyservers.net
 keyserver hkp://pgp.cyberbits.eu
 #keyserver hkps://keys.openpgp.org
+#keyserver hkp://keyserver.ubuntu.com:80
 
 # Provide a certificate store to override the system default
 # Get this from https://sks-keyservers.net/sks-keyservers.netCA.pem
