--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -3,7 +3,7 @@
     // Choose the order of the modules
     "modules-left": ["sway/workspaces", "sway/mode", "sway/scratchpad"],
     "modules-center": ["sway/window"],
-    "modules-right": ["idle_inhibitor", "user", "pulseaudio", "bluetooth", "network", "network#vpn", "battery", "disk", "temperature#nvme", "cpu", "temperature#cpu", "temperature#gpu", "memory", "clock#local", "clock"],
+    "modules-right": ["idle_inhibitor", "user", "pulseaudio", "bluetooth", "network", "network#vpn", "battery", "disk", "temperature#disk", "cpu", "temperature#cpu", "temperature#gpu", "custom/fan", "memory", "clock#local", "clock"],
     // Modules configuration
     "sway/workspaces": {
         "disable-scroll": true,
@@ -91,7 +91,12 @@
         "format": " {avail:0.0f}G",
         "tooltip-format": "RAM {used:0.1f}/{total:0.0f}G ({percentage}%) used",
     },
-    "temperature#nvme": {
+    "custom/fan": {
+        "interval": 5,
+        "exec": "cat /sys/devices/platform/thinkpad_hwmon/hwmon/hwmon*/fan1_input",
+        "format": " {} RPM",
+    },
+    "temperature#disk": {
         "hwmon-path": "/sys/class/hwmon/hwmon1/temp1_input",
         "critical-threshold": 45,
         "format": " {temperatureC}°C",
@@ -116,7 +121,7 @@
         "tooltip-format": "{ipaddr}/{cidr} via {gwaddr} dev {ifname}",
         "tooltip-format-wifi": "{ipaddr}/{cidr} via {gwaddr} dev {ifname} ({frequency} GHz)",
         "format-linked": " {ifname} (No IP)",
-        "format-disconnected": "⚠ Disconnected",
+        "format-disconnected": "⚠ DISCONNECTED",
     },
     "network#vpn": {
         "interface": "wg-mullvad",
