--- a/.config/sway/config
+++ b/.config/sway/config
@@ -139,7 +139,7 @@ bindsym $mod+minus scratchpad show
 bar swaybar_command waybar
 
 # Lock screen
-bindsym $mod+Delete exec swaylock -i ~/.wallpaper.jpg
+bindsym $mod+Delete exec swaylock --show-failed-attempts -i ~/.wallpaper.jpg
 
 # Power management
 bindsym $mod+Escape exec systemctl suspend
@@ -169,10 +169,10 @@ output "*" bg ~/.wallpaper.jpg fill
 for_window [app_id="kitty"] opacity 0.9
 #for_window [class=".*"] opacity 0.8
 
-# lock the screen after 5 minutes and turn it off five seconds later
+# lock the screen after 10 minutes and turn it off five seconds later
 exec swayidle -w \
-  timeout 300 'swaylock -f' \
-  timeout 305 'swaymsg "output * power off"' \
+  timeout 600 'swaylock --daemonize --show-failed-attempts -i ~/.wallpaper.jpg' \
+  timeout 605 'swaymsg "output * power off"' \
   resume 'swaymsg "output * power on"'
 
 # must be last
