--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -3,7 +3,7 @@
     // Choose the order of the modules
     "modules-left": ["sway/workspaces", "sway/mode", "sway/scratchpad"],
     "modules-center": ["sway/window"],
-    "modules-right": ["idle_inhibitor", "user", "pulseaudio", "bluetooth", "network", "network#vpn", "battery", "disk", "temperature#disk", "cpu", "temperature#cpu", "temperature#gpu", "custom/fan", "memory", "clock#local", "clock"],
+    "modules-right": ["user", "pulseaudio", "bluetooth", "network", "network#vpn", "battery", "disk", "temperature#disk", "cpu", "temperature#cpu", "temperature#gpu", "custom/fan", "memory", "clock#local", "clock"],
     // Modules configuration
     "sway/workspaces": {
         "disable-scroll": true,
@@ -33,15 +33,8 @@
         "tooltip": true,
         "tooltip-format": "{app}: {title}",
     },
-    "idle_inhibitor": {
-        "format": "{icon}",
-        "format-icons": {
-            "activated": "",
-            "deactivated": "",
-        },
-    },
     "user": {
-        "format": "{work_d} days",
+        "format": "{work_d}", // days
     },
     "clock#local": {
         "interval": 60,
@@ -63,6 +56,7 @@
         "format": "{icon}  {capacity}% {time} {power:0.0f}W",
         "format-charging": " {capacity}% {power:0.0f}W",
         "format-plugged": " {capacity}% {power:0.0f}W",
+        "format-full": "{icon} ",
         "format-icons": ["", "", "", "", ""],
         "format-time": "{H}:{m}",
     },
