--- a/.config/sway/config
+++ b/.config/sway/config
@@ -142,7 +142,7 @@ bar swaybar_command waybar
 bindsym $mod+Delete exec swaylock --show-failed-attempts -i ~/.wallpaper.jpg
 
 # Power management
-bindsym $mod+Escape exec systemctl suspend
+bindsym $mod+Escape exec "swaylock --daemonize --show-failed-attempts -i ~/.wallpaper.jpg; systemctl suspend"
 bindsym $mod+Shift+Escape exec systemctl poweroff
 
 # Screenshot with Scrot
