--- a/.config/yay/config.json
+++ b/.config/yay/config.json
@@ -1,5 +1,6 @@
 {
 	"aururl": "https://aur.archlinux.org",
+	"aurrpcurl": "https://aur.archlinux.org/rpc?",
 	"buildDir": "/home/infertux/.cache/yay",
 	"editor": "",
 	"editorflags": "",
@@ -7,7 +8,6 @@
 	"makepkgconf": "",
 	"pacmanbin": "pacman",
 	"pacmanconf": "/etc/pacman.conf",
-	"tarbin": "bsdtar",
 	"redownload": "no",
 	"rebuild": "no",
 	"answerclean": "None",
@@ -19,16 +19,20 @@
 	"gpgflags": "",
 	"mflags": "",
 	"sortby": "votes",
+	"searchby": "name-desc",
 	"gitflags": "",
-	"removemake": "ask",
+	"removemake": "yes",
+	"sudobin": "sudo",
+	"sudoflags": "",
+	"version": "12.0.4",
 	"requestsplitn": 150,
-	"sortmode": 0,
 	"completionrefreshtime": 7,
+	"maxconcurrentdownloads": 0,
+	"bottomup": true,
 	"sudoloop": false,
 	"timeupdate": false,
 	"devel": false,
 	"cleanAfter": false,
-	"gitclone": true,
 	"provides": true,
 	"pgpfetch": true,
 	"upgrademenu": true,
@@ -36,5 +40,12 @@
 	"diffmenu": true,
 	"editmenu": false,
 	"combinedupgrade": false,
-	"useask": false
+	"useask": false,
+	"batchinstall": false,
+	"singlelineresults": false,
+	"separatesources": true,
+	"newinstallengine": true,
+	"debug": false,
+	"rpc": true,
+	"doubleconfirm": true
 }
