Add aerc custom settings

--- a/.config/aerc/binds.conf
+++ b/.config/aerc/binds.conf
@@ -65,7 +65,7 @@ q = :close<Enter>
 O = :open<Enter>
 S = :save<space>
 | = :pipe<space>
-D = :delete<Enter>
+d = :move Trash<Enter>
 A = :archive flat<Enter>
 
 <C-l> = :open-link <space>
