--- a/.config/aerc/aerc.conf
+++ b/.config/aerc/aerc.conf
@@ -481,11 +481,11 @@ text/plain=colorize
 text/calendar=calendar
 message/delivery-status=colorize
 message/rfc822=colorize
-#text/html=pandoc -f html -t plain | colorize
+text/html=pandoc -f html -t plain | colorize
 #text/html=html | colorize
 #text/*=bat -fP --file-name="$AERC_FILENAME"
 #application/x-sh=bat -fP -l sh
-#image/*=catimg -w $(tput cols) -
+image/*=catimg -w $(tput cols) -
 #subject,~Git(hub|lab)=lolcat -f
 #from,thatguywhodoesnothardwraphismessages=wrap -w 100 | colorize
 
@@ -523,6 +523,7 @@ message/rfc822=colorize
 #
 # Executed when a new email arrives in the selected folder
 #mail-received=notify-send "New mail from $AERC_FROM_NAME" "$AERC_SUBJECT"
+mail-received = espeak --stdout "New email from $AERC_FROM_NAME: $AERC_SUBJECT" | paplay
 
 #
 # Executed when aerc starts
