--- a/.config/aerc/aerc.conf
+++ b/.config/aerc/aerc.conf
@@ -523,7 +523,7 @@ image/*=catimg -w $(tput cols) -
 #
 # Executed when a new email arrives in the selected folder
 #mail-received=notify-send "New mail from $AERC_FROM_NAME" "$AERC_SUBJECT"
-mail-received = espeak --stdout "New email from $AERC_FROM_NAME: $AERC_SUBJECT" | paplay
+#mail-received = espeak --stdout "New email from $AERC_FROM_NAME: $AERC_SUBJECT" | paplay
 
 #
 # Executed when aerc starts
