--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "zsh-syntax-highlighting"]
 	path = .zsh/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+[submodule "vim-plugin-caddyfile"]
+	path = .vim/pack/plugins/start/caddyfile
+	url = https://github.com/isobit/vim-caddyfile.git
