--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -60,7 +60,7 @@ verbose
 
 # This is the server that --recv-keys, --send-keys, and --search-keys will
 # communicate with to receive keys from, send keys to, and search for keys on
-keyserver hkp://pgp.cyberbits.eu
+keyserver hkps://pgp.cyberbits.eu
 #keyserver hkps://keys.openpgp.org
 #keyserver hkp://keyserver.ubuntu.com:80
 
